# zone-update

./: .gitignore  .release-plz.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: release-plz.yml  tests.yml
docs/: PROVIDERS.md
examples/: acme-dns.rs  acme-dns01-async.rs  acme-dns01-lers.rs  acme-dns01.rs  provider-from-config.rs  provider-from-config.toml
src/: errors.rs  http.rs  lib.rs
src/async_impl/: bunny.rs  cloudflare.rs  desec.rs  digitalocean.rs  dnsimple.rs  dnsmadeeasy.rs  gandi.rs  linode.rs  mod.rs  porkbun.rs
src/bunny/: mod.rs  types.rs
src/cloudflare/: mod.rs  types.rs
src/desec/: mod.rs  types.rs
src/digitalocean/: mod.rs  types.rs
src/dnsimple/: mod.rs  types.rs
src/dnsmadeeasy/: mod.rs  types.rs
src/gandi/: mod.rs  types.rs
src/linode/: mod.rs  types.rs
src/porkbun/: mod.rs  types.rs
tests/: config.corn  config.rs  dyntests.rs
