[package]
name = "zone-edit"
version = "0.3.1"
description = "A minimal library of DNS provider utilities"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/tarka/zone-edit"
edition = "2024"

[dependencies]
blocking = { version = "1.6.2", features = ["tracing"] }
cfg-if = "1.0.3"
chrono = { version = "0.4.42", features = ["now", "serde"], default-features = false }
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.16"
tracing = "0.1.41"
ureq = { version = "3.1.2" }

[features]
default = ["all-providers"]
async = []
all-providers = ["gandi", "dnsimple"]
gandi = []
dnsimple = []

# Test features
# Disables http module tests that rely on external services
test_offline = []
test_gandi = ["gandi"]
test_dnsimple = ["dnsimple"]
test_smol = ["async"]
test_tokio = ["async"]

[dev-dependencies]
acme-micro = "0.13.0"
anyhow = "1.0.100"
cfg-if = "1.0.3"
hex = "0.4.3"
macro_rules_attribute = "0.2.2"
random-string = "1.1.0"
sha1 = "0.10.6"
smol-macros = "0.1.1"
test-log = { version = "0.2.18", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
tracing-test = "0.2.5"

# Smol testing
futures-rustls = { version = "0.26.0", features = ["aws-lc-rs"] }
smol = { version = "2.0.2" }
smol-hyper = { version = "0.1.1" }

# Tokio testing
hyper-util = { version = "0.1.17", features = ["tokio"] }
tokio = { version = "1.47.1", features = ["rt", "test-util", "net", "full"] }
tokio-rustls = { version = "0.26.3" }

[[example]]
name = "acme-dns01"
required-features = ["gandi"]

[[example]]
name = "acme-dns01-async"
required-features = ["async", "gandi"]

[lints.rust]
# FIXME: For early dev, remove before public release
dead_code = "allow"
unused = "allow"
