[package]
name = "zone-update"
version = "0.5.3"
description = "A minimal library of DNS provider utilities"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/tarka/zone-update"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
blocking = { version = "1.6.2", features = ["tracing"], optional = true }
cfg-if = "1.0.4"
chrono = { version = "0.4.42", features = ["now", "serde"], default-features = false }
hex = { version = "0.4.3", optional = true }
hmac = { version = "0.12.1", optional = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha1 = { version = "0.10.6", optional = true }
thiserror = "2.0.17"
tracing = "0.1.41"
ureq = { version = "3.1.4", default-features = false, features = ["rustls", "gzip", "brotli"] }

[features]
default = ["all-providers"]
async = ["dep:blocking"]
all-providers = ["gandi", "dnsmadeeasy", "dnsimple", "porkbun"]
dnsimple = []
dnsmadeeasy = ["dep:hmac", "dep:sha1", "dep:hex"]
gandi = []
porkbun = []

# Test features
# Disables http module tests that rely on external services
test_offline = []
test_gandi = ["gandi"]
test_dnsimple = ["dnsimple"]
test_dnsmadeeasy = ["dnsmadeeasy"]
test_porkbun = ["porkbun"]
test_smol = ["async"]
test_tokio = ["async"]
hmac = ["dep:hmac"]
hex = ["dep:hex"]

[dev-dependencies]
anyhow = "1.0.100"
cfg-if = "1.0.4"
hex = "0.4.3"
macro_rules_attribute = "0.2.2"
random-string = "1.1.0"
sha1 = "0.10.6"
smol-macros = "0.1.1"
test-log = { version = "0.2.18", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
tracing-test = "0.2.5"

# Smol testing
futures-rustls = { version = "0.26.0", features = ["aws-lc-rs"] }
smol = { version = "2.0.2" }
smol-hyper = { version = "0.1.1" }

# Tokio testing
hyper-util = { version = "0.1.18", features = ["tokio"] }
tokio = { version = "1.48.0", features = ["rt", "test-util", "net", "full"] }
tokio-rustls = { version = "0.26.4" }
futures = "0.3.31"
dnsclient = "0.2.0"
instant-acme = "0.8.4"
libcorn = "0.10.0"

[[example]]
name = "acme-dns01-async"
required-features = ["async"]
